--- a/MDSProject/MDSProject.csproj
+++ b/MDSProject/MDSProject.csproj
@@ -60,6 +60,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegisterDoctorForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RegisterDoctorForm.Designer.cs">
+      <DependentUpon>RegisterDoctorForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="CancelForm.resx">
       <DependentUpon>CancelForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -75,6 +81,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="RegisterDoctorForm.resx">
+      <DependentUpon>RegisterDoctorForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
