--- a/MDSProject/MDSProject.csproj
+++ b/MDSProject/MDSProject.csproj
@@ -58,6 +58,12 @@
     <Compile Include="MainMenuForm.Designer.cs">
       <DependentUpon>MainMenuForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="NewAppointementForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NewAppointementForm.Designer.cs">
+      <DependentUpon>NewAppointementForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="CancelForm.resx">
@@ -65,6 +71,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainMenuForm.resx">
       <DependentUpon>MainMenuForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NewAppointementForm.resx">
+      <DependentUpon>NewAppointementForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
