--- a/MDSProject/MDSProject.csproj
+++ b/MDSProject/MDSProject.csproj
@@ -85,6 +85,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SelectDoctorForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SelectDoctorForm.Designer.cs">
+      <DependentUpon>SelectDoctorForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AppointmentDetailsForm.resx">
       <DependentUpon>AppointmentDetailsForm.cs</DependentUpon>
     </EmbeddedResource>
