--- a/MDSProject/MDSProject.csproj
+++ b/MDSProject/MDSProject.csproj
@@ -66,6 +66,7 @@
     <Compile Include="ConfirmationForm.Designer.cs">
       <DependentUpon>ConfirmationForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="DoctorDet.cs" />
     <Compile Include="ErrorMessageForm.cs">
       <SubType>Form</SubType>
     </Compile>
