--- a/MDSProject/MDSProject.csproj
+++ b/MDSProject/MDSProject.csproj
@@ -92,6 +92,12 @@
     <Compile Include="RegisterDoctorForm.Designer.cs">
       <DependentUpon>RegisterDoctorForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="SelectDateTimeForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SelectDateTimeForm.Designer.cs">
+      <DependentUpon>SelectDateTimeForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="SelectDoctorForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -127,6 +133,9 @@
     </Compile>
     <EmbeddedResource Include="RegisterDoctorForm.resx">
       <DependentUpon>RegisterDoctorForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SelectDateTimeForm.resx">
+      <DependentUpon>SelectDateTimeForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SelectDoctorForm.resx">
       <DependentUpon>SelectDoctorForm.cs</DependentUpon>
