--- a/MDSProject/MDSProject.csproj
+++ b/MDSProject/MDSProject.csproj
@@ -85,6 +85,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegisterConsultationDetails.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RegisterConsultationDetails.Designer.cs">
+      <DependentUpon>RegisterConsultationDetails.cs</DependentUpon>
+    </Compile>
     <Compile Include="RegisterDoctorForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -124,6 +130,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="RegisterConsultationDetails.resx">
+      <DependentUpon>RegisterConsultationDetails.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="RegisterDoctorForm.resx">
       <DependentUpon>RegisterDoctorForm.cs</DependentUpon>
     </EmbeddedResource>
