--- a/MDSProject/App.config
+++ b/MDSProject/App.config
@@ -8,8 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <connectionStrings>
-    <add name="HealthITDBContainer" connectionString="metadata=res://*/HealthITDB.csdl|res://*/HealthITDB.ssdl|res://*/HealthITDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=C:\Users\DIOGO\Documents\MDSDB.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="HealthITDBContainer1" connectionString="metadata=res://*/HealthITDB.csdl|res://*/HealthITDB.ssdl|res://*/HealthITDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=C:\Users\DIOGO\Documents\HealthITDB.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="HealthITDBContainer1" connectionString="metadata=res://*/HealthITDB.csdl|res://*/HealthITDB.ssdl|res://*/HealthITDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=C:\Users\alexa\Documents\HealthITDB.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
