--- a/MDSUnitTest/MDSUnitTest.csproj
+++ b/MDSUnitTest/MDSUnitTest.csproj
@@ -51,6 +51,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="NewAppointementFormTests.cs" />
     <Compile Include="UnitTestCancel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTestDoc.cs" />
