--- a/MDSProject/MDSProject.csproj
+++ b/MDSProject/MDSProject.csproj
@@ -107,11 +107,29 @@
     <Compile Include="HelpDesk.cs">
       <DependentUpon>HealthITDB.tt</DependentUpon>
     </Compile>
+    <Compile Include="LoginDoctorForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LoginDoctorForm.Designer.cs">
+      <DependentUpon>LoginDoctorForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="LoginHelpdeskForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LoginHelpdeskForm.Designer.cs">
+      <DependentUpon>LoginHelpdeskForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainMenuForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainMenuForm.Designer.cs">
       <DependentUpon>MainMenuForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MenuLoginForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MenuLoginForm.Designer.cs">
+      <DependentUpon>MenuLoginForm.cs</DependentUpon>
     </Compile>
     <Compile Include="NewAppointementForm.cs">
       <SubType>Form</SubType>
@@ -148,8 +166,17 @@
     <EmbeddedResource Include="ErrorMessageForm.resx">
       <DependentUpon>ErrorMessageForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="LoginDoctorForm.resx">
+      <DependentUpon>LoginDoctorForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LoginHelpdeskForm.resx">
+      <DependentUpon>LoginHelpdeskForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainMenuForm.resx">
       <DependentUpon>MainMenuForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MenuLoginForm.resx">
+      <DependentUpon>MenuLoginForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="NewAppointementForm.resx">
       <DependentUpon>NewAppointementForm.cs</DependentUpon>
